eventscontrollooppoc/gateway-resource.yaml
apiVersion: argoproj.io/v1alpha1
kind: Gateway
metadata:
  name: resource-gateway
  labels:
    # gateway controller with instanceId "argo-events" will process this gateway
    gateways.argoproj.io/gateway-controller-instanceid: argo-events
    # gateway controller will use this label to match with it's own version
    # do not remove
    argo-events-gateway-version: v0.11
spec:
  type: "resource"
  eventSource: "resource-event-source"
  processorPort: "9330"
  eventProtocol:
    type: "HTTP"
    http:
      port: "9300"
  template:
    metadata:
      name: "resource-gateway"
      labels:
        gateway-name: "resource-gateway"
    spec:
      containers:
        - name: "gateway-client"
          image: "argoproj/gateway-client:v0.11"
          imagePullPolicy: "IfNotPresent"
          command: ["/bin/gateway-client"]
        - name: "resource-events"
          image: "localhost:30500/resource-gateway:v0.11"
          imagePullPolicy: "Always"
          command: ["/bin/resource-gateway"]
      serviceAccountName: "argo-events-sa"
  watchers:
    sensors:
      - name: "resource-sensor"
