eventscontrollooppoc/gateway-sqs.yaml
apiVersion: argoproj.io/v1alpha1
kind: Gateway
metadata:
  name: aws-sqs-gateway
  labels:
    # gateway controller with instanceId "argo-events" will process this gateway
    gateways.argoproj.io/gateway-controller-instanceid: argo-events
    # gateway controller will use this label to match with it's own version
    # do not remove
    argo-events-gateway-version: v0.11
spec:
  type: "aws-sqs"
  eventSource: "aws-sqs-event-source"
  processorPort: "9330"
  eventProtocol:
    type: "HTTP"
    http:
      port: "9300"
  template:
    metadata:
      name: "aws-sqs-gateway"
      labels:
        gateway-name: "aws-sqs-gateway"
    spec:
      containers:
        - name: "gateway-client"
          image: "argoproj/gateway-client:v0.11"
          imagePullPolicy: "Always"
          command: ["/bin/gateway-client"]
        - name: "aws-sqs-events"
          image: "969213798065.dkr.ecr.us-west-2.amazonaws.com/bchase-eventstatepoc/aws-sqs-gateway:v0.11"
          imagePullPolicy: "Always"
          command: ["/bin/aws-sqs-gateway"]
      serviceAccountName: "argo-events-sa"
      imagePullSecrets:
        - name: aws-ecr-credentials
  watchers:
    sensors:
      - name: "aws-sqs-sensor"
